--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=9002
 
 # Kafka Consumer properties
 spring.kafka.consumer.bootstrap-servers=127.0.0.1:9092
-spring.kafka.consumer.group-id=group_id
+spring.kafka.consumer.group-id=group_id_1
 #spring.kafka.consumer.auto-offset-reset=earliest
-spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.IntegerDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-topic.name.consumer=TestTopic
+topic.name.consumer=DemoTopic2
