--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,13 @@ server.port=9002
 
 # Kafka Consumer properties
 spring.kafka.consumer.bootstrap-servers=127.0.0.1:9092
-spring.kafka.consumer.group-id=group_id_1
+spring.kafka.consumer.group-id=group_id_manual
 #spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.IntegerDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
-topic.name.consumer=DemoTopic2
+spring.kafka.consumer.enable-auto-commit=false
+spring.kafka.listener.ack-mode=MANUAL_IMMEDIATE
+spring.kafka.consumer.max-poll-records=10 
+spring.kafka.consumer.max-poll-time=5000
+
+topic.name.consumer=DemoTopic-auto
