--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.kafka.listener.ack-mode=MANUAL_IMMEDIATE
 spring.kafka.consumer.max-poll-records=10 
 spring.kafka.consumer.max-poll-time=5000
 
-topic.name.consumer=DemoTopic-auto
+topic.name.consumer=DemoTopic-manual
