--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=9002
 
 # Kafka Consumer properties
 spring.kafka.consumer.bootstrap-servers=127.0.0.1:9092
-spring.kafka.consumer.group-id=group_id_manual
+spring.kafka.consumer.group-id=group_id_auto
 #spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.IntegerDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
